-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
Feb 4 12:04:26 snx11008n002 kernel: LustreError: 19158:0:(ldlm_flock.c:849:ldlm_export_flock_put()) ASSERTION( flock->blocking_export != ((void *)0) ) failed:
Feb 4 12:04:26 snx11008n002 kernel: LustreError: 19158:0:(ldlm_flock.c:849:ldlm_export_flock_put()) LBUG
Feb 4 12:04:26 snx11008n002 kernel: Pid: 19158, comm: mdt_401
Feb 4 12:04:26 snx11008n002 kernel:
Feb 4 12:04:26 snx11008n002 kernel: Call Trace:
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa044d825>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa044de27>] lbug_with_loc+0x47/0xb0 [libcfs]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa070aa9d>] ldlm_export_flock_put+0x8d/0x90 [ptlrpc]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa045e641>] cfs_hash_bd_del_locked+0x91/0x140 [libcfs]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa0461261>] cfs_hash_del+0x71/0x1d0 [libcfs]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa08ab4d0>] ? kiblnd_send+0x2a0/0x9b0 [ko2iblnd]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa070b2a2>] ldlm_flock_blocking_unlink+0x52/0x90 [ptlrpc]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa070b7c4>] ldlm_process_flock_lock+0x264/0x1620 [ptlrpc]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa070b560>] ? ldlm_process_flock_lock+0x0/0x1620 [ptlrpc]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa06e00d2>] ldlm_reprocess_queue+0x112/0x220 [ptlrpc]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa070b87f>] ldlm_process_flock_lock+0x31f/0x1620 [ptlrpc]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa06e14f3>] ldlm_lock_enqueue+0x483/0x9b0 [ptlrpc]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa0709d0f>] ldlm_handle_enqueue0+0x4af/0xff0 [ptlrpc]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa0c1bca6>] mdt_enqueue+0x46/0xe0 [mdt]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa0c12062>] mdt_handle_common+0x922/0x16e0 [mdt]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa0c12ef5>] mdt_regular_handle+0x15/0x20 [mdt]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa0737ce3>] ptlrpc_main+0xf13/0x19d0 [ptlrpc]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa0736dd0>] ? ptlrpc_main+0x0/0x19d0 [ptlrpc]
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffff8100c14a>] child_rip+0xa/0x20
Feb 4 12:04:26 snx11008n002 kernel: [<ffffffffa0736dd0>] ? ptlrpc_main+0x0/0x19d0 [ptlrpc]